src/objects/Loan_Project__c.object
<CustomObject>
    <description>LPAM - Loan Portfolio Asset Management Project</description>
    <fields>
        <fullName>Acquisition_Costs__c</fullName>
        <label>Acquisition Costs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Building_Permit_PTS_Numbers__c</fullName>
        <label>Building Permit PTS Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closing__c</fullName>
        <description>Closing/Origination Date or Date Funded</description>
        <label>Closing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Completion Date (Certificate of Occupancy)</description>
        <inlineHelpText>This is the Certificate of Occupancy Date</inlineHelpText>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conventional_Debt_Amount__c</fullName>
        <label>Conventional Debt Amount</label>
        <summarizedField>Conventional_Debt__c.Original_Loan_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Conventional_Debt__c.Funding_Source_Type__c</field>
            <operation>equals</operation>
            <value>Conventional</value>
        </summaryFilterItems>
        <summaryForeignKey>Conventional_Debt__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Conventional_Debt_Outstanding_Balance__c</fullName>
        <inlineHelpText>This is fed from the Conventional Debt Object -&gt; Outstanding Balance field.</inlineHelpText>
        <label>Conventional Debt Outstanding Balance</label>
        <summarizedField>Conventional_Debt__c.Outstanding_Balance__c</summarizedField>
        <summaryFilterItems>
            <field>Conventional_Debt__c.Funding_Source_Type__c</field>
            <operation>equals</operation>
            <value>Conventional</value>
        </summaryFilterItems>
        <summaryForeignKey>Conventional_Debt__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Conventional_Debt_Payments__c</fullName>
        <label>Conventional Debt Payments</label>
        <summarizedField>Conventional_Debt__c.Total_Payments__c</summarizedField>
        <summaryForeignKey>Conventional_Debt__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Building_Permit_Pulled__c</fullName>
        <label>Date Building Permit Pulled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deferred_Developer_Fees__c</fullName>
        <label>Deferred Developer Fees</label>
        <summarizedField>Deferred_Developer_Fee__c.Amount__c</summarizedField>
        <summaryForeignKey>Deferred_Developer_Fee__c.Loan_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Density_Bonus__c</fullName>
        <label>Density Bonus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Developer_Fee__c</fullName>
        <label>Developer Fee</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Development_Costs_Sources__c</fullName>
        <formula>Total_Amount_of_Bonds__c + Conventional_Debt_Amount__c + Tax_Credit_Equity__c + Grant_Rollup__c + SDHC_Loan_Amount__c + Deferred_Developer_Fees__c+ Subordinate_Debt_Amount__c+ Other_Financing_Sources__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Development Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Development_Costs_Uses__c</fullName>
        <formula>Acquisition_Costs__c + Financing_Costs__c + Other_Uses__c + Hard_Cost_Contingency__c + Hard_Costs__c + Soft_Costs__c + Financing_Costs__c +  Developer_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Development Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Percentage__c</fullName>
        <label>Estimated Completion Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Financing_Costs__c</fullName>
        <label>Financing Costs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Rollup__c</fullName>
        <label>Grant Rollup</label>
        <summarizedField>Grant__c.Amount__c</summarizedField>
        <summaryForeignKey>Grant__c.Loan_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hard_Cost_Contingency__c</fullName>
        <label>Hard Cost Contingency</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hard_Costs__c</fullName>
        <label>Hard Costs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Housing_Authority_Date__c</fullName>
        <label>Housing Authority Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Housing_Commission_Date__c</fullName>
        <label>Housing Commission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inclusionary__c</fullName>
        <label>Inclusionary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jump_Percent__c</fullName>
        <label>Jump Percent</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LIHTC__c</fullName>
        <label>LIHTC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4%</fullName>
                </value>
                <value>
                    <fullName>9%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Project_ID__c</fullName>
        <label>Legacy Project ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_to_Value__c</fullName>
        <formula>( Conventional_Debt_Outstanding_Balance__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan to Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Payment__c</fullName>
        <label>Minimum Payment</label>
        <summarizedField>SDHC_Loan__c.Minimum_Payment__c</summarizedField>
        <summaryFilterItems>
            <field>SDHC_Loan__c.Minimum_Payment__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>SDHC_Loan__c.Loan_Portfolio_Asset_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Option_To_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Option To Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Financing_Sources__c</fullName>
        <label>Other Financing Sources</label>
        <summarizedField>Other_Financing_Source__c.Amount__c</summarizedField>
        <summaryForeignKey>Other_Financing_Source__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Specify__c</fullName>
        <label>Other (Specify)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Uses__c</fullName>
        <label>Other Uses</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Jump_Year__c</fullName>
        <label>Payment Jump Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placed_In_Service__c</fullName>
        <label>Placed In Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Portfolio Management</fullName>
                </value>
                <value>
                    <fullName>Housing Finance-Loan</fullName>
                </value>
                <value>
                    <fullName>Housing Finance-Bond</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Compliance – Civic</fullName>
                </value>
                <value>
                    <fullName>Compliance – Civic San Diego</fullName>
                </value>
                <value>
                    <fullName>Land Use-Density Bonus</fullName>
                </value>
                <value>
                    <fullName>Land Use-Inclusionary</fullName>
                </value>
                <value>
                    <fullName>Land Use-SRO</fullName>
                </value>
                <value>
                    <fullName>Land Use-Coastal</fullName>
                </value>
                <value>
                    <fullName>HDP</fullName>
                </value>
                <value>
                    <fullName>Former RDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Housing_Use__c</fullName>
        <label>Project Housing Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rental</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Condo Conversion</fullName>
                </value>
                <value>
                    <fullName>For Sale</fullName>
                </value>
                <value>
                    <fullName>Transitional Housing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Contact_Type__c</field>
                <operation>equals</operation>
                <value>Housing Finance Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Under Construction</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Potential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Year__c</fullName>
        <label>Purchase Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_RPT__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type RPT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reserves__c</fullName>
        <label>Reserves</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Residual_Receipt_Percentage__c</fullName>
        <label>Residual Receipt Percentage</label>
        <summarizedField>SDHC_Loan__c.Payment_Terms__c</summarizedField>
        <summaryForeignKey>SDHC_Loan__c.Loan_Portfolio_Asset_Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Restricted_Term_End_Date__c</fullName>
        <label>Restricted Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Restricted_Term__c</fullName>
        <label>Restricted Term</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDHC_Ground_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SDHC Ground Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDHC_Loan_Amount__c</fullName>
        <label>SDHC Loan Amount</label>
        <summarizedField>SDHC_Loan__c.Original_Approved_Loan_Amount__c</summarizedField>
        <summaryForeignKey>SDHC_Loan__c.Loan_Portfolio_Asset_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Soft_Costs__c</fullName>
        <label>Soft Costs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source_of_Data_for_Sources_and_Uses__c</fullName>
        <label>Source of Data for Sources and Uses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HA Report Proforma</fullName>
                </value>
                <value>
                    <fullName>Closing Proforma</fullName>
                </value>
                <value>
                    <fullName>Final Cost Certification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subordinate_Debt_Amount__c</fullName>
        <label>Subordinate Debt Amount</label>
        <summarizedField>Conventional_Debt__c.Original_Loan_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Conventional_Debt__c.Funding_Source_Type__c</field>
            <operation>equals</operation>
            <value>Subordinate, HCD, CalHFA, HUD, Other</value>
        </summaryFilterItems>
        <summaryForeignKey>Conventional_Debt__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subordinate_Debt_Outstanding_Balance__c</fullName>
        <inlineHelpText>This is fed from the Conventional Debt Object -&gt; Outstanding Balance Field.</inlineHelpText>
        <label>Subordinate Debt Outstanding Balance</label>
        <summarizedField>Conventional_Debt__c.Outstanding_Balance__c</summarizedField>
        <summaryFilterItems>
            <field>Conventional_Debt__c.Funding_Source_Type__c</field>
            <operation>equals</operation>
            <value>Subordinate, HCD, CalHFA, HUD, Other</value>
        </summaryFilterItems>
        <summaryForeignKey>Conventional_Debt__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TDC_Notes__c</fullName>
        <description>Total Development Cost Notes</description>
        <inlineHelpText>Total Development Cost Notes</inlineHelpText>
        <label>Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Credit_Equity__c</fullName>
        <label>Tax Credit Equity</label>
        <summarizedField>Tax_Credit_Equity__c.Amount__c</summarizedField>
        <summaryForeignKey>Tax_Credit_Equity__c.Loan_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amount_of_Bonds__c</fullName>
        <label>Total Amount of Bonds</label>
        <summarizedField>Bond__c.Assistance_Amount_At_Conversion__c</summarizedField>
        <summaryForeignKey>Bond__c.LPAM_Bond__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type_Of_Construction__c</fullName>
        <label>Type Of Construction</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Construction</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Rehabilitation</fullName>
                </value>
                <value>
                    <fullName>Preservation</fullName>
                </value>
                <value>
                    <fullName>Adaptive Re-Use</fullName>
                </value>
                <value>
                    <fullName>Condo Conversion</fullName>
                </value>
                <value>
                    <fullName>Demolition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Bond_Projects</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012t0000000Gslx</value>
        </filters>
        <label>Bond Projects</label>
    </listViews>
    <listViews>
        <fullName>Multi_Family_Projects</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Loan_Project__c.Default_Project_Record_Type,012t0000000GsnA</value>
        </filters>
        <label>Multi-Family Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Default_Project_Record_Type</fullName>
        <active>true</active>
        <description>This is the default record type for all projects</description>
        <label>Default Project Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>